--- a/index.html
+++ b/index.html
@@ -2,21 +2,31 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Rutina Gym</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gym App PRO</title>
 
 <style>
 body{
-    background:black;
-    color:white;
+    background:#000;
+    color:#fff;
     font-family:Arial;
     margin:0;
 }
 
+header{
+    background:#111;
+    padding:15px;
+    text-align:center;
+    font-size:20px;
+    font-weight:bold;
+}
+
 .menu{
     display:flex;
+    flex-wrap:wrap;
     justify-content:center;
-    gap:10px;
-    padding:15px;
+    gap:8px;
+    padding:10px;
     background:#111;
 }
 
@@ -24,12 +34,12 @@ button{
     background:#222;
     color:white;
     border:none;
-    padding:10px 15px;
+    padding:10px 14px;
+    border-radius:8px;
     cursor:pointer;
-    border-radius:6px;
 }
 
-button:hover{ background:#444; }
+button:hover{ background:#333; }
 
 .container{
     max-width:800px;
@@ -39,50 +49,62 @@ button:hover{ background:#444; }
 
 input{
     background:#111;
-    border:1px solid #555;
+    border:1px solid #444;
     color:white;
-    padding:5px;
+    padding:6px;
     width:70px;
-    margin:5px;
+    margin:4px;
+    border-radius:6px;
 }
-
-.hidden{ display:none; }
 
 .card{
     background:#111;
     padding:15px;
+    border-radius:10px;
     margin:10px 0;
-    border-radius:8px;
+}
+
+.hidden{ display:none; }
+
+.pr{
+    color:#00ff88;
+    font-weight:bold;
 }
 </style>
 </head>
 
 <body>
 
-<!-- PERFIL -->
+<header>GYM APP PRO 💪</header>
+
 <div id="perfilSelect" class="container">
 <h2>Selecciona perfil</h2>
 <button onclick="seleccionarPerfil('William')">William</button>
 <button onclick="seleccionarPerfil('JuanManuel')">Juan Manuel</button>
 </div>
 
-<!-- MENU -->
 <div id="menu" class="menu hidden">
 <button onclick="mostrarDia(1)">Dia 1</button>
 <button onclick="mostrarDia(2)">Dia 2</button>
 <button onclick="mostrarDia(3)">Dia 3</button>
 <button onclick="mostrarDia(4)">Dia 4</button>
 <button onclick="mostrarDia(5)">Dia 5</button>
-<button onclick="mostrarDias()">Dias</button>
+<button onclick="mostrarHistorial()">Historial</button>
+<button onclick="mostrarProgreso()">Progreso</button>
 </div>
 
 <div class="container" id="contenido"></div>
 
 <script>
-
 let perfil="";
 
-/* ---------- PERFIL ---------- */
+const rutina={
+1:["Press inclinado","Fondos","Aperturas","Press cerrado","Extensión tríceps"],
+2:["Dominadas","Remo barra","Jalón pecho","Peso muerto rumano","Curl barra","Curl inclinado"],
+3:["Sentadilla","Prensa","Curl femoral","Extensión cuádriceps","Gemelos"],
+4:["Press militar","Elevaciones laterales","Elevaciones posteriores","Encogimientos","Crunch peso"],
+5:["Press banca","Dominadas","Remo mancuerna","Curl + Extensión"]
+};
 
 function seleccionarPerfil(p){
     perfil=p;
@@ -90,25 +112,16 @@ function seleccionarPerfil(p){
     document.getElementById("menu").classList.remove("hidden");
 }
 
-/* ---------- EJERCICIOS ---------- */
+function keyDia(n){
+    return perfil+"_dia"+n;
+}
 
-const rutina={
-1:["Press inclinado mancuernas","Fondos en paralelas","Aperturas mancuernas","Press cerrado","Extensión tríceps polea"],
-2:["Dominadas","Remo con barra","Jalón al pecho","Peso muerto rumano","Curl barra","Curl inclinado"],
-3:["Sentadilla libre","Prensa","Curl femoral","Extensión cuádriceps","Gemelos de pie"],
-4:["Press militar","Elevaciones laterales","Elevaciones posteriores","Encogimientos barra","Crunch con peso"],
-5:["Press banca","Dominadas","Remo mancuerna","Curl + Extensión superserie"]
-};
-
-/* ---------- UI ---------- */
-
-function ocultarTodo(){
+function limpiar(){
     document.getElementById("contenido").innerHTML="";
 }
 
 function mostrarDia(n){
-    ocultarTodo();
-
+    limpiar();
     let html=`<h2>Dia ${n} <input type="date" id="fecha"></h2>`;
 
     rutina[n].forEach((e,i)=>{
@@ -116,20 +129,15 @@ function mostrarDia(n){
         <p>${e}
         <input id="kg${i}" placeholder="KG">
         Reps <input id="rep${i}">
+        <span id="pr${i}" class="pr"></span>
         </p>`;
     });
 
     html+=`<button onclick="guardarDia(${n})">Guardar</button>`;
-
     document.getElementById("contenido").innerHTML=html;
 
     cargarDia(n);
-}
-
-/* ---------- GUARDAR ---------- */
-
-function keyDia(n){
-    return perfil+"_dia"+n;
+    mostrarPR(n);
 }
 
 function guardarDia(n){
@@ -141,7 +149,7 @@ function guardarDia(n){
 
     rutina[n].forEach((_,i)=>{
         datos.ejercicios.push({
-            kg:document.getElementById("kg"+i).value,
+            kg:parseFloat(document.getElementById("kg"+i).value)||0,
             rep:document.getElementById("rep"+i).value
         });
     });
@@ -151,10 +159,8 @@ function guardarDia(n){
 }
 
 function cargarDia(n){
-
     let datos=localStorage.getItem(keyDia(n));
     if(!datos) return;
-
     datos=JSON.parse(datos);
 
     document.getElementById("fecha").value=datos.fecha;
@@ -165,20 +171,36 @@ function cargarDia(n){
     });
 }
 
-/* ---------- HISTORIAL ---------- */
+function mostrarPR(n){
 
-function mostrarDias(){
-    ocultarTodo();
+    rutina[n].forEach((e,i)=>{
 
+        let max=0;
+
+        for(let d=1;d<=5;d++){
+            let datos=localStorage.getItem(perfil+"_dia"+d);
+            if(datos){
+                datos=JSON.parse(datos);
+                if(datos.ejercicios[i]){
+                    max=Math.max(max,datos.ejercicios[i].kg);
+                }
+            }
+        }
+
+        if(max>0){
+            document.getElementById("pr"+i).innerText=" PR: "+max+"kg";
+        }
+    });
+}
+
+function mostrarHistorial(){
+    limpiar();
     let html="<h2>Historial</h2>";
 
     for(let i=1;i<=5;i++){
-
         let datos=localStorage.getItem(keyDia(i));
-
         if(datos){
             datos=JSON.parse(datos);
-
             html+=`
             <div class="card">
             <b>Dia ${i}</b><br>
@@ -192,16 +214,31 @@ function mostrarDias(){
     document.getElementById("contenido").innerHTML=html;
 }
 
-/* ---------- ELIMINAR ---------- */
-
 function eliminarDia(n){
-
-    if(confirm("¿Eliminar este día?")){
+    if(confirm("¿Eliminar día?")){
         localStorage.removeItem(keyDia(n));
-        mostrarDias();
+        mostrarHistorial();
     }
 }
 
+/* -------- PROGRESO SIMPLE -------- */
+
+function mostrarProgreso(){
+    limpiar();
+    let html="<h2>Progreso General</h2>";
+
+    for(let d=1;d<=5;d++){
+        let datos=localStorage.getItem(keyDia(d));
+        if(datos){
+            datos=JSON.parse(datos);
+            let total=0;
+            datos.ejercicios.forEach(e=> total+=e.kg);
+            html+=`<div class="card">Dia ${d} - Total levantado: ${total} kg</div>`;
+        }
+    }
+
+    document.getElementById("contenido").innerHTML=html;
+}
 </script>
 
 </body>
