--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>GYM</title>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -11,45 +11,20 @@
 
 body{
 margin:0;
-font-family:system-ui;
 background:#000;
 color:white;
+font-family:-apple-system,BlinkMacSystemFont,system-ui;
+overflow:hidden;
 }
 
 /* HEADER */
 header{
-background:#0b0b0b;
+background:#0c0c0c;
 text-align:center;
 padding:18px;
 font-size:24px;
 font-weight:700;
-letter-spacing:3px;
-box-shadow:0 2px 10px rgba(0,0,0,.6);
-}
-
-/* PERFIL CENTER */
-#perfil{
-height:80vh;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-gap:20px;
-}
-
-.perfilBtn{
-width:220px;
-padding:15px;
-font-size:18px;
-background:#111;
-border-radius:12px;
-border:1px solid #333;
-transition:.2s;
-}
-
-.perfilBtn:hover{
-background:#1a1a1a;
-transform:scale(1.05);
+letter-spacing:2px;
 }
 
 /* MENU */
@@ -58,20 +33,85 @@ display:flex;
 flex-wrap:wrap;
 justify-content:center;
 gap:8px;
-padding:12px;
+padding:10px;
 background:#111;
 }
 
-.menu button{
-background:#1b1b1b;
-border-radius:10px;
+button{
+background:#1a1a1a;
+color:white;
+border:none;
 padding:10px 14px;
+border-radius:10px;
+cursor:pointer;
+transition:.2s;
 }
 
-.container{
-max-width:850px;
-margin:auto;
+button:active{
+transform:scale(.95);
+}
+
+/* SCREEN SYSTEM */
+
+#screen{
+position:relative;
+height:calc(100vh - 120px);
+overflow:hidden;
+}
+
+.view{
+position:absolute;
+width:100%;
+height:100%;
+overflow-y:auto;
 padding:20px;
+box-sizing:border-box;
+}
+
+/* iOS animations */
+
+.enter{
+animation:slideIn .35s ease forwards;
+}
+
+.exit{
+animation:slideOut .35s ease forwards;
+}
+
+@keyframes slideIn{
+from{transform:translateX(40px);opacity:0}
+to{transform:translateX(0);opacity:1}
+}
+
+@keyframes slideOut{
+from{transform:translateX(0);opacity:1}
+to{transform:translateX(-40px);opacity:0}
+}
+
+/* perfil center */
+
+.center{
+display:flex;
+flex-direction:column;
+justify-content:center;
+align-items:center;
+height:100%;
+gap:20px;
+}
+
+.perfilBtn{
+width:220px;
+padding:15px;
+font-size:18px;
+border-radius:14px;
+background:#111;
+}
+
+.card{
+background:#111;
+padding:14px;
+margin:12px 0;
+border-radius:14px;
 }
 
 input{
@@ -79,40 +119,21 @@ background:#0f0f0f;
 border:1px solid #333;
 color:white;
 padding:6px;
-width:75px;
+width:70px;
 border-radius:6px;
 margin:5px;
 }
 
-.card{
-background:#111;
-border-radius:14px;
-padding:15px;
-margin:12px 0;
-box-shadow:0 0 10px rgba(0,0,0,.5);
-}
+.pr{color:#00ff9f;font-weight:bold}
 
-.pr{
-color:#00ff9f;
-font-weight:bold;
-margin-left:8px;
+.save{
+background:#00aa66;
+padding:12px;
+border-radius:10px;
+margin-top:10px;
 }
 
 .hidden{display:none}
-
-button{
-cursor:pointer;
-color:white;
-border:none;
-}
-
-.saveBtn{
-margin-top:15px;
-background:#00aa66;
-padding:12px 20px;
-border-radius:10px;
-font-weight:bold;
-}
 
 </style>
 </head>
@@ -120,13 +141,6 @@ font-weight:bold;
 <body>
 
 <header>GYM 💪</header>
-
-<!-- PERFIL -->
-<div id="perfil">
-<h2>Selecciona Perfil</h2>
-<button class="perfilBtn" onclick="setPerfil('William')">William</button>
-<button class="perfilBtn" onclick="setPerfil('JuanManuel')">Juan Manuel</button>
-</div>
 
 <div id="menu" class="menu hidden">
 <button onclick="abrirDia(1)">D1</button>
@@ -138,16 +152,42 @@ font-weight:bold;
 <button onclick="progreso()">Progreso</button>
 </div>
 
-<div id="app" class="container"></div>
+<div id="screen"></div>
 
 <script>
 
-/* ---------- ESTADO ---------- */
+/* ---------- NAV SYSTEM ---------- */
 
-let perfilActual="";
+let currentView=null;
+
+function cambiarVista(html){
+
+const screen=document.getElementById("screen");
+
+if(currentView){
+currentView.classList.add("exit");
+
+setTimeout(()=>{
+currentView.remove();
+crearNueva();
+},300);
+
+}else crearNueva();
+
+function crearNueva(){
+const div=document.createElement("div");
+div.className="view enter";
+div.innerHTML=html;
+screen.appendChild(div);
+currentView=div;
+}
+
+}
+
+/* ---------- DATA ---------- */
+
+let perfil="";
 let diaActual=null;
-
-/* ---------- RUTINA ---------- */
 
 const rutina={
 1:["Press inclinado","Fondos","Aperturas","Press cerrado","Extensión tríceps"],
@@ -157,21 +197,27 @@ const rutina={
 5:["Press banca","Dominadas","Remo mancuerna","Curl + Extensión"]
 };
 
+const key=d=>perfil+"_dia_"+d;
+
 /* ---------- PERFIL ---------- */
 
+function perfilScreen(){
+cambiarVista(`
+<div class="center">
+<h2>Selecciona Perfil</h2>
+<button class="perfilBtn" onclick="setPerfil('William')">William</button>
+<button class="perfilBtn" onclick="setPerfil('JuanManuel')">Juan Manuel</button>
+</div>
+`);
+}
+
 function setPerfil(p){
-perfilActual=p;
-perfil.classList.add("hidden");
+perfil=p;
 menu.classList.remove("hidden");
+abrirDia(1);
 }
 
-/* ---------- STORAGE KEY ---------- */
-
-function key(d){
-return `${perfilActual}_dia_${d}`;
-}
-
-/* ---------- ABRIR DIA ---------- */
+/* ---------- DIA ---------- */
 
 function abrirDia(d){
 
@@ -181,53 +227,51 @@ let html=`<h2>Dia ${d}
 <input type="date" id="fecha_${d}">
 </h2>`;
 
-rutina[d].forEach((ej,i)=>{
+rutina[d].forEach((e,i)=>{
 html+=`
 <div class="card">
-${ej}<br>
+${e}<br>
 KG <input id="kg_${d}_${i}">
 Reps <input id="rep_${d}_${i}">
 <span id="pr_${d}_${i}" class="pr"></span>
 </div>`;
 });
 
-html+=`<button class="saveBtn" onclick="guardarDia()">Guardar</button>`;
+html+=`<button class="save" onclick="guardar()">Guardar</button>`;
 
-app.innerHTML=html;
+cambiarVista(html);
 
-cargarDia(d);
+setTimeout(()=>{
+cargar(d);
 mostrarPR(d);
+},50);
 }
 
-/* ---------- GUARDAR ---------- */
+/* ---------- SAVE ---------- */
 
-function guardarDia(){
+function guardar(){
 
 let d=diaActual;
 
 let data={
 fecha:document.getElementById(`fecha_${d}`).value,
-ejercicios:[]
+ej:[]
 };
 
 rutina[d].forEach((_,i)=>{
-
-data.ejercicios.push({
+data.ej.push({
 kg:Number(document.getElementById(`kg_${d}_${i}`).value)||0,
 rep:document.getElementById(`rep_${d}_${i}`).value
 });
-
 });
 
 localStorage.setItem(key(d),JSON.stringify(data));
-
 alert("Guardado ✅");
 }
 
-/* ---------- CARGAR ---------- */
+/* ---------- LOAD ---------- */
 
-function cargarDia(d){
-
+function cargar(d){
 let info=localStorage.getItem(key(d));
 if(!info)return;
 
@@ -235,7 +279,7 @@ info=JSON.parse(info);
 
 document.getElementById(`fecha_${d}`).value=info.fecha;
 
-info.ejercicios.forEach((e,i)=>{
+info.ej.forEach((e,i)=>{
 document.getElementById(`kg_${d}_${i}`).value=e.kg;
 document.getElementById(`rep_${d}_${i}`).value=e.rep;
 });
@@ -253,8 +297,8 @@ for(let x=1;x<=5;x++){
 let data=localStorage.getItem(key(x));
 if(data){
 data=JSON.parse(data);
-if(data.ejercicios[i])
-max=Math.max(max,data.ejercicios[i].kg);
+if(data.ej[i])
+max=Math.max(max,data.ej[i].kg);
 }
 }
 
@@ -271,9 +315,7 @@ function historial(){
 let html="<h2>Historial</h2>";
 
 for(let d=1;d<=5;d++){
-
 let data=localStorage.getItem(key(d));
-
 if(data){
 data=JSON.parse(data);
 
@@ -287,7 +329,7 @@ Fecha: ${data.fecha}<br><br>
 }
 }
 
-app.innerHTML=html;
+cambiarVista(html);
 }
 
 function eliminarDia(d){
@@ -301,7 +343,10 @@ historial();
 
 function progreso(){
 
-app.innerHTML=`<h2>Progreso 📈</h2><canvas id="chart"></canvas>`;
+let html=`<h2>Progreso 📈</h2><canvas id="chart"></canvas>`;
+cambiarVista(html);
+
+setTimeout(()=>{
 
 let labels=[];
 let valores=[];
@@ -310,10 +355,8 @@ for(let d=1;d<=5;d++){
 let data=localStorage.getItem(key(d));
 if(data){
 data=JSON.parse(data);
-
 let total=0;
-data.ejercicios.forEach(e=>total+=e.kg);
-
+data.ej.forEach(e=>total+=e.kg);
 labels.push("Dia "+d);
 valores.push(total);
 }
@@ -321,23 +364,18 @@ valores.push(total);
 
 new Chart(chart,{
 type:"line",
-data:{
-labels,
-datasets:[{
-label:"Peso total",
-data:valores,
-tension:.3
-}]
-},
+data:{labels,datasets:[{label:"Peso total",data:valores,tension:.3}]},
 options:{
 plugins:{legend:{labels:{color:"white"}}},
-scales:{
-x:{ticks:{color:"white"}},
-y:{ticks:{color:"white"}}
-}
+scales:{x:{ticks:{color:"white"}},y:{ticks:{color:"white"}}}
 }
 });
+
+},100);
 }
+
+/* START */
+perfilScreen();
 
 </script>
 
